--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 	<div class="zena">
 	<img src="images/zena1.jpg" alt="Jarmila">
+	<div class="text">
 	<h2>Jarmila Bloňďatá</h2>
 	<p>Kontrolu rybářský jiný čem noc vesuvu. V ho. Potravou ať dlouhou nízké v postupovali přemístí. </p>
+	</div>
 	</div>
 
 	<div class="zena">
