--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="kontakty">
 
 	<div class="zena">
-	<img src="images/zena1.jpg" alt="Jarmila">
+	<img class="obrazek" src="images/zena1.jpg" alt="Jarmila">
 	<div class="text">
 	<h2>Jarmila Bloňďatá</h2>
 	<p>Kontrolu rybářský jiný čem noc vesuvu. V ho. Potravou ať dlouhou nízké v postupovali přemístí. </p>
@@ -20,22 +20,28 @@
 	</div>
 
 	<div class="zena">
-	<img src="images/zena2.jpg" alt="Klotylda">
+	<img class="obrazek" src="images/zena2.jpg" alt="Klotylda">
+	<div class="text">
 	<h2>Klotylda Usměvavá</h2>
 	<p>Z část, jde myotis i navrhovanou hladce soudy plavby k zdroj připomenou za vzhledem i vyhýbá žlutě.</p>
 	</div>
+</div>
 
 	<div class="zena">
-	<img src="images/zena3.jpg" alt="Magdaléna">
+	<img class="obrazek" src="images/zena3.jpg" alt="Magdaléna">
+	<div class="text">
 	<h2>Magdaléna Krátkovlasá</h2>
 	<p>Západních k dostává araby turistů s divný si jí potřebné i do bílá důležití přírody dáti.</p>
 	</div>
+</div>
 
 	<div class="zena">
-	<img src="images/zena4.jpg" alt="Lucinda">
+	<img class="obrazek" src="images/zena4.jpg" alt="Lucinda">
+	<div class="text">
 	<h2>Lucinda Usměvavá</h2>
 	<p>Kosila neznámý kluby desítek k jsem tj. rozdíl klidně budov vloni, ústní že mír vesnic kutuře novou.</p>
 	</div>
+</div>
 </div>
 
 </body>
